--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,5 +4,11 @@ server:
 spring:
   application:
     name: search-engine
+  data:
+    elasticsearch:
+      cluster-name: docker-cluster
+      cluster-nodes: 127.0.0.1:9300
+      repositories:
+        enabled: true
 
 swaggerBaseUrl: ${SWAGGER_BASE_URL:localhost:${server.port}}
